--- a/02-CSS基础/07-浮动.md
+++ b/02-CSS基础/07-浮动.md
@@ -18,6 +18,11 @@
 - 浮动中margin相关
 - 关于margin的IE6兼容问题
 
+## CSS定位机制
+- 普通流（标准流）：默认状态，元素自动从左往右，从上往下排列。
+- 浮动
+- 绝对定位
+
 ## 标准文档流
 
 
@@ -157,6 +162,12 @@ css中一共有三种手段，使一个元素脱离标准文档流：
 
 这便引出我们今天要讲的内容：浮动。
 
+## 什么是浮动？
+- 会使元素向左或向右移动，只能左右，不能上下。
+- 浮动元素碰到包含框或另一个浮动框，浮动停止。
+- 浮动元素之后得元素将围绕它，之前得不受影响。
+- 浮动元素会脱离标准流
+其实浮动最开始是用来做文字环绕图片的效果的。
 
 ## 浮动的性质
 
@@ -170,7 +181,7 @@ css中一共有三种手段，使一个元素脱离标准文档流：
 
 ![](http://img.smyhvae.com/20170729_1723.png)
 
-这就达到了浮动的效果。此时，两个元素并排了，并且两个元素都能够设置宽度、高度了（这在上一段的标准流中，不能实现）。
+这就达到了浮动的效果。此时，两个元素并排了，并且两个元素都能够设置宽度、高度了（这在上一段的标准流中，不能实现），设置浮动之后元素会寻找父元素的边并靠上去，后面的浮动元素会跟着前面的浮动元素
 
 浮动想学好，一定要知道三个性质。接下来讲一讲。
 
@@ -221,7 +232,7 @@ css中一共有三种手段，使一个元素脱离标准文档流：
 
 ![](http://img.smyhvae.com/20170730_2005.png)
 
-上图中，我们发现：**div挡住了p，但不会挡住p中的文字**，形成“字围”效果。
+上图中，我们发现：**div挡住了p，但不会挡住p中的文字**，形成“字围”效果。但文字和图片不会重叠，因为图片虽然在加了浮动之后脱离文档流了，但没有脱离文本流，仍然会占据文本空间，（元素无视它的存在，但是元素中的文字会围绕在它周围，但是不会脱离dom树，用浏览器的审查元素就可以看到脱离文档流的元素），而使用绝对定位可以使元素脱离文档流和文本流（元素和其中的文字都定位不到它的存在）。浮动元素不会影响前面的元素，只会影响自己后面的元素
 
 总结：**标准流中的文字不会被浮动的盒子遮挡住**。（文字就像水一样）
 
@@ -399,6 +410,13 @@ css中一共有三种手段，使一个元素脱离标准文档流：
 
 
 ![](http://img.smyhvae.com/20170801_0900.png)
+
+
+
+## 使用浮动后产生的问题
+浮动很好用，但是用浮动后，当浮动元素的父级元素没有高度时（因为很多时候我们设置为自适应的高度），就会造成高度塌陷，从而影响布局。因为父元素的高度默认是被子元素撑开的，也就是子元素多高，父元素就多高。如果子元素设置浮动，则会导致其完全脱离文档流，子元素脱离文档流将无法撑开父元素， 导致父元素的高度丢失，就是我们说的高度塌陷问题。父元素一旦高度塌陷，则它下边的元素会向上移动， 导致整个页面的布局混乱 。
+
+
 
 
 ## 浮动的清除
