--- a/04-JavaScript基础/08-基本数据类型vs引用数据类型.md
+++ b/04-JavaScript基础/08-基本数据类型vs引用数据类型.md
@@ -50,6 +50,13 @@
 
 从上面的例子中，可以反映出，基本数据类型和引用数据类型是有区别的。
 
+TIPS:undefined值是派生自null值的，所以undefined==null得返回结果是true。
+
+## NaN
+1. 任何涉及NaN的操作（例如NaN/10）都会返回NaN.
+2. NaN于任何值都不想等，包括NaN本身
+
+isNaN()用来检测是否是“非数值”，返回布尔值
 
 
 ## 栈内存和堆内存
