--- a/04-JavaScript基础/15-数组的常见方法&数组的遍历.md
+++ b/04-JavaScript基础/15-数组的常见方法&数组的遍历.md
@@ -1,4 +1,25 @@
-
+数组也是对象数据类型的，也是由键值对组成的
+```
+var ary = [12,23,34];  一维数组
+结构:
+0:12
+1:23
+2:34
+length:3
+```
+数组中每一项的值可以是任何数据类型的
+```
+var ary= [   多维数组
+	{ 
+	name:'xxx',
+	age :20
+	},
+	{
+	name:'xxx',
+	age:20
+	}
+];
+```
 
 ## 前言
 
@@ -1163,13 +1184,6 @@ array = Array.from(arrayLike)
         return newArr;
     }
 ```
-
-## 我的公众号
-
-想学习<font color=#0000ff>**代码之外的技能**</font>？不妨关注我的微信公众号：**千古壹号**（id：`qianguyihao`）。
-
-扫一扫，你将发现另一个全新的世界，而这将是一场美丽的意外：
-
-![](http://img.smyhvae.com/20190101.png)
+注意数组塌陷的问题
 
 
