--- a/04-JavaScript基础/09-函数.md
+++ b/04-JavaScript基础/09-函数.md
@@ -285,11 +285,52 @@ return的作用是结束方法。
 我们可以这样说，如果直接是`fn()`，那就说明是函数调用。如果是发现`XX.fn()`的这种形式，那就说明是**方法**调用。
 
 
-## 我的公众号
+## 参数判断方法
+n == undefined不好，因为null==undefined也是相等的(===才不想等)
+真实项目中用： typeof n=='undefined'
 
-想学习<font color=#0000ff>**代码之外的技能**</font>？不妨关注我的微信公众号：**千古壹号**（id：`qianguyihao`）。
+total = 0;  //0是有值的，会在栈内存中占一个位置
+total = null;  //而null是空对象指针，是不占内存位置的
 
-扫一扫，你将发现另一个全新的世界，而这将是一场美丽的意外：
+## 任意数求和
+> 不管函数执行的时候，传递多少实参值进来，我们都可以求和
+形参的局限性：我们需要具体地知道用户执行的时候传递实参、顺序等，才可以使用形参变量定义对应的入口
 
-![](http://img.smyhvae.com/2016040102.jpg)
+arguments:函数内置的实参集合（内置：函数天生就存在的机制，不管你是否设置了形参，也不管你是否传递了实参，arguments都有，始终存在
+```
+function sum()
+{
+console.log(arguments);  //ARG它是一个类数组（不是数组，不能直接使用数组中的方法）
+//即使设置形参变量，形参该是什么值还是什么值，但是ARG使用存储的是所有传递进来的实参，所以它被称为”实参集合“
+{
+0:10,
+1:20,
+length:2,
+callee：存储的是当前函数本身 arguments.callee === sum  =>true
+}
+//把ARG中存储的实参值依次遍历，每遍历一个就累加起来，最后实现任意数求和
+基础版本：碰到字符串输入，结果会变成字符串拼接
+function sum(){
+var total = null;
+for(var i=0;i<arguments.length;i++)
+{
+var item = arguments[i];//每一次遍历出来的实参值
+total += item;
+}
+return total;
+}
+console.log(sum(10));
+升级版本：
+function sum(){
+var total = null;
+for(var i=0;i<arguments.length;i++)
+{
+var item = arguments[i];//每一次遍历出来的实参值
+item = Number(item);
+isNaN(item)>null:total+=item;
+}
+return total;
+}
+
+```
 
