--- a/04-JavaScript基础/09-函数.md
+++ b/04-JavaScript基础/09-函数.md
@@ -285,11 +285,57 @@ return的作用是结束方法。
 我们可以这样说，如果直接是`fn()`，那就说明是函数调用。如果是发现`XX.fn()`的这种形式，那就说明是**方法**调用。
 
 
-## 我的公众号
 
-想学习<font color=#0000ff>**代码之外的技能**</font>？不妨关注我的微信公众号：**千古壹号**（id：`qianguyihao`）。
+## 实名函数和匿名函数
 
-扫一扫，你将发现另一个全新的世界，而这将是一场美丽的意外：
+实名函数：有函数名的
+匿名函数：没有函数名的
 
-![](http://img.smyhvae.com/2016040102.jpg)
+什么时候会用到匿名函数？
+- 函数表达式：把函数当作值赋值给变量或者元素的事件
+- 自执行函数：创建和执行一起完成的
+- ...
+```
+//函数表达式
+var fn = function()
+{
+}
+oBox.onclick = function()
+{
+}
+
+//自执行函数
+(funciton(){
+}) ();
+
+~function(){
+}();
+
++function(){
+}();
+!function(){
+}();
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
