--- a/05-JavaScript进阶/作用域和闭包.md
+++ b/05-JavaScript进阶/作用域和闭包.md
@@ -813,8 +813,39 @@ function myModule() {
 </script>
 ```
 
+# 补充
+
+## 全局变量和私有变量
+```
+var a=12,
+    b=13,
+    c=14;
+    
+function fn(a){
+    console.log(a,b,c);  //=>12,13,14 正确答案：12,undefined,14(c是全局的)
+    var b=c=a=20;  //b变量提升了，c和a作用域链向上级查找
+    console.log(a,b,c);  //=>20,20,20
+}
+fn(a);
+console.log(a,b,c);  //=>12,13,14  正确答案：12,13,20
+```
+练习：
+```
+var ary = [12,23];
+
+function fn(ary){
+ console.log(ary); // 12,23
+ ary[0] = 100;
+ ary = [100];
+ ary[0] = 0;
+ console.log(ary);  //0
+}
+
+fn(ary);
+console.log(ary);   //12,23   正确答案：123
 
 
+```
 
 
 
