--- a/05-JavaScript进阶/作用域和闭包.md
+++ b/05-JavaScript进阶/作用域和闭包.md
@@ -842,11 +842,62 @@ function fn(ary){
 }
 
 fn(ary);
-console.log(ary);   //12,23   正确答案：123
+console.log(ary);   //12,23   正确答案：100,23
+过程分析：变量提升：声明一个变量ary，声明和定义fn，然后代码继续执行->fn(ary)
+```
+## 上级作用域
+```
+var a = 12;
 
-
+function fn()
+{
+//console.log(a);
+//arguments:实参集合
+//arguments.callee:函数本身fn
+//arguments.callee.caller：当前函数在哪执行的，caller就是谁（记录的是它执行的宿主环境），在全局下执行caller的结果是Null
+//了解一下就行，现在严格模式下不让用
+//console.log(arguments.callee);
+}
+function sum()
+{
+var a = 120;
+fn();
+}
+sum();  //输出的a是12.
+//因为当前函数执行，形成一个私有作用域A，A的上级作用域是谁，和他在哪执行的没有关系
+//和他在哪创建的有关系，在哪创建的，它的上级作用域就是谁
 ```
 
+```
+var n = 10;
+function fn(){
+    var n =20;
+    function f()
+    {
+        n++;
+        console.log(n);  
+    }
+    f();  
+    return f;
+}
+var x = fn(); //21
+x();          //22
+x();          //23
+console.log(n);  //
+```
+
+## 栈内存和堆内存的销毁
+堆内村：存储引用数据类型值（对象：键值对 函数：代码字符串）
+栈内存：提供JS代码执行的环境和存储基本类型值
+
+堆内存只要没有东西占用就会被销毁，只需要让函数==null
+栈内存释放：
+一般情况下，当函数执行完成，所形成的私有作用域（栈内存）都会自动释放掉（在栈内存中存储的值也都会释放掉，），但是也有特殊情况：
+1.函数执行完成，当前形成的栈内存中，某些内容被栈内存以外的变量占用了，此时栈内存不能释放（一旦释放外面找不到原有的内容了）
+2.全局作用域所在的栈内存，是加载页面就会创建一个全局作用域供js执行。只要页面不关，就存在
+```
+
+```
 
 
 
