--- a/05-JavaScript进阶/作用域和闭包.md
+++ b/05-JavaScript进阶/作用域和闭包.md
@@ -894,10 +894,35 @@ console.log(n);  //
 栈内存释放：
 一般情况下，当函数执行完成，所形成的私有作用域（栈内存）都会自动释放掉（在栈内存中存储的值也都会释放掉，），但是也有特殊情况：
 1.函数执行完成，当前形成的栈内存中，某些内容被栈内存以外的变量占用了，此时栈内存不能释放（一旦释放外面找不到原有的内容了）
-2.全局作用域所在的栈内存，是加载页面就会创建一个全局作用域供js执行。只要页面不关，就存在
+2.全局作用域所在的栈内存，是加载页面就会创建一个全局作用域供js执行。只要页面不关，就存在。
+
+## 闭包
+两种观点：
+1.函数形成一个私有的作用域，保护里面的私有变量不受外界的干扰，这种保护机制称之为“闭包”
+2.市面上的开发者认为的闭包是：形成一个不销毁的私有作用域（私有栈内存）才是闭包
+两个高阶技巧：
+```
+//闭包：柯理化函数
+function fn(){
+    return function (){
+    
+    }
+}
+var f = fn();
+//fn()形成的作用域无法销毁
+
+//闭包：惰性函数
+var utils = (function () {
+    return {
+    
+    }
+})();
 ```
 
-```
+## 闭包的应用
+//真实项目中为了保证JS的性能（堆栈内存的性能优化），应该尽可能减少闭包的使用（不销毁的堆栈内存是耗性能的）
+1.闭包具有“保护”作用：保护私有变量不受外界的干扰
+2.闭包具有“保存”作用：形成不销毁的栈内存，把一些值保存下来，方便后面的调取使用
 
 
 
